fix: change height for card projects on mobile view and add the real image for card projects

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,10 @@
   --font-anonymousPro: 'Anonymous Pro';
   --font-biryani: 'Biryani';
   --font-federo: 'Federo';
+
+  --breakpoint-mobile-s: 320px;
+  --breakpoint-mobile-m: 375px;
+  --breakpoint-mobile-l: 425px;
 }
 
 @layer base {
